After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 596659 - Fix handling of grabbed key events
Fix handling of grabbed key events
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2009-09-28 19:49 UTC by Dan Winship
Modified: 2010-04-12 21:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix handling of grabbed key events (767 bytes, patch)
2009-09-28 19:49 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2009-09-28 19:49:30 UTC
noticed while investigating something else; the code is obviously wrong
but i'm not aware of anything actually affected by it
Comment 1 Dan Winship 2009-09-28 19:49:32 UTC
Created attachment 144194 [details] [review]
Fix handling of grabbed key events
Comment 2 Owen Taylor 2009-09-29 14:01:09 UTC
Comment on attachment 144194 [details] [review]
Fix handling of grabbed key events

Looks good.
Comment 3 drago01 2010-04-11 20:22:31 UTC
(In reply to comment #1)
> Created an attachment (id=144194) [details] [review]
> Fix handling of grabbed key events

Any reason why this is still not pushed?
Comment 4 Dan Winship 2010-04-12 21:52:41 UTC
Attachment 144194 [details] pushed as debf08c - Fix handling of grabbed key events