Fix handling of grabbed key events

https://bugzilla.gnome.org/show_bug.cgi?id=596659